kubernetes/database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: tcr-ns
spec:
  selector:
    matchLabels:
      app: tcr-app
      tier: postgres
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: tcr-app
        tier: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12
          resources:
            limits:
              memory: 70Mi
            requests:
              memory: 50Mi
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: tcr-ns
  labels:
    app: tcr-app
    tier: postgres
spec:
  ports:
   - port: 5432
     targetPort: 5432
     #nodePort: 31002
  selector:
    app: tcr-app
    tier: postgres
  type: ClusterIP
