kubernetes/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcr-app-client-deploy
  namespace: tcr-ns
spec:
  selector:
    matchLabels:
      app: tcr-app-client
  replicas: 1
  template:
    metadata:
      name : tcr-app-client-pod
      labels:
        app: tcr-app-client
    spec:
      restartPolicy: Always
     #imagePullSecrets:
     #  - name: regcred
      containers:
        - name: tcr-app-client
          image: alaatriaa/frontend:env
          resources:
            limits:
              memory: 750Mi
            requests:
              memory: 650Mi
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3000
          
          livenessProbe:
            exec:
              command:
                - echo
                - "frontend svc!!"
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
          
---
apiVersion: v1
kind: Service

metadata:
  name: tcr-app-client-svc
  namespace: tcr-ns
spec:
  selector:
    app: tcr-app-client
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      #nodePort: 31000
  type: ClusterIP
