kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    external-dns.alpha.kubernetes.io/ingress-hostname-source: talan-container-registry.tn
  name: tcr-ingress
  namespace: tcr-ns
  labels:
    name: frontend-ingress
spec:
  
  rules:
    - 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tcr-app-client-svc
                
                port:
                  number: 3000
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: tcr-app-server-svc
                
                port:
                  number: 9000
